# langgraph-course

./: .gitignore  Makefile  README.md  pyproject.toml
module-1/: agent.ipynb  chain.ipynb  deployment.ipynb  router.ipynb  simple-graph.ipynb
module-1/studio/: langgraph.json  router.py
module-2/: chat-memorization-and-persistence.ipynb  multiple-schemas.ipynb  state-reducers.ipynb  state-schema.ipynb  trim-filter-messages.ipynb
module-2/state_db/: example.db-shm  example.db-wal
module-3/: breakpoints.ipynb  editing-graph-state.ipynb  streaming-interruption.ipynb  time-travel.ipynb
module-3/studio-m3/: dynamic_breakpoints.py  langgraph.json
module-4/: map-reduce.ipynb  parallelization.ipynb  research-assistant.ipynb  sub-graph.ipynb
