[tool.poetry]
name = "langgraph-course"
package-mode = false
description = ""
authors = ["Alexandre Henrique <alexandre.hsd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.21"
langgraph-sdk = "^0.1.30"
langgraph-checkpoint-sqlite = "^1.0.3"
langsmith = "^0.1.120"
langchain-community = "^0.3.0"
langchain-core = "^0.3.0"
langchain-openai = "^0.2.0"
notebook = "^7.2.2"
tavily-python = "^0.4.0"
wikipedia = "^1.4.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
